--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.18.0",
+    "react-redux": "^7.0.3",
+    "react-saga": "^0.3.1"
   }
 }
