--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
   "devDependencies": {
     "axios": "^0.18.0",
     "react-redux": "^7.0.3",
-    "react-saga": "^0.3.1"
+    "react-router-dom": "^5.0.0",
+    "react-saga": "^0.3.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
+    "redux-saga": "^1.0.2"
   }
 }
