Get my user on saga

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "github-app",
   "version": "0.1.0",
+  "description": "GitHub-App",
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
