--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
   },
   "devDependencies": {
     "axios": "^0.18.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0",
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-saga": "^0.3.1",
